Jenkins-app/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - jenkins-app.ddns.net
      secretName: jenkins-tls
  rules:
    - host: jenkins-app.ddns.net
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 8080
